fix: header spacing

--- a/static/app.css
+++ b/static/app.css
@@ -237,16 +237,13 @@ header {
 }
 
 @media only screen and (min-width: 1200px) {
-    header {
-        padding-left: 150px;
-    }
     .layout {
         grid-template-columns: 1fr 3px 1fr;
     }
 }
 
 @media only screen and (min-width: 1500px) {
-    header {
+    .has-results header {
         padding-left: 150px;
     }
     .layout {
